--- a/src/pages/home/styles.css
+++ b/src/pages/home/styles.css
@@ -3,6 +3,7 @@
     width: 100%;
     background-color: #1e1e1f;
     height: 100vh;
+    justify-content: space-between;
  
 }
 .header{
@@ -16,62 +17,193 @@
     height: 100%;
     display: flex;
 }
+
 .container-form{
     width: 400px;
     height: 300px;
     margin-left: 60px;
 }
 .container-tab-1{
-    display: flex;
-    flex-direction: row;
+   
     align-items: flex-start;
     box-sizing: border-box;
   
 }
 .container-tab-grid-1{
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     box-sizing: border-box;
     justify-content: space-between;
-    width: 250px;
+    width: 100%;
     display: flex;
+    
 }
 .form{
     width: 430px;
-    height: 260px;
-    background-color: #28282a;;
-    margin-top: 200px;
+    height: 460px;
+    background-color: #28282a;;   
     flex-direction: column;
     display: flex;
     align-items: center;
     box-shadow: 0px 10px 22px 2px #0a0a0a97;
     box-sizing: border-box;
+    border-radius: 8px;
 }
+.form input[type='radio']{
+    margin: 10px;    
+}
+.container-city-nasc{
+    width: 100%;
+    flex-direction: row;
+    display: flex;
+    margin-bottom: 25px;
+    justify-content: space-between;
+}
+.container-city-nasc > label{
+    flex-direction: column;
+    display: flex;
+}
+
 .line{
     background-color: #25b797;
-    height: 5px;
+    height: 10px;
     width: 430px;
+    bottom: 10px;
+    position: relative;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
 }
-.template{
-    width: 400px;
-    height: 200px;
-    background-color: #484b4e;
-  
-}
+
 .inputName{
-    width: 90%;
+    width: 100%;
     outline: none;
     border: none;
     height: 25px;
     background-color: rgb(255, 255, 255);
     box-sizing: border-box;
+    border-radius: 5px;
 }
 #labelStyle{
     font-family: 'Varela Round', sans-serif;
     margin:3px;
+    align-items: flex-start;
+    display: flex;
+    width: 100%;
 }
 #select-state-civil{
     outline: none;
     border: none;
     background-color: #9f9f9f;
+}
+.carousel{
+    align-items: center;
+    justify-content: center;
+ 
+}
+.shere{
+    width: 330px;
+    height: 460px;
+    display: flex;
+    align-items: center;
+    box-shadow: 0px 10px 22px 2px #0a0a0a53;
+    box-sizing: border-box;
+    background-color: #dca9e7;;
+    border-radius: 10px;
+    margin-left: 35px;
+    justify-content: center;
+}
+.template1{
+    margin-left: 35px;
+    width: 330px;
+    height: 460px;
+    display: flex;
+    align-items: flex-start;
+    box-shadow: 0px 10px 22px 2px #0a0a0a53;
+    box-sizing: border-box;
+    background-color: #f3f3f3;;
+    border-radius: 10px;
+    justify-content: flex-end;
+}
+
+.header-template-1{
+    padding: 6px;
+    width: 100%;
+    height: 90px;
+    background-color:rgba(2, 102, 97, 0.16);
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.nome-temp1{
+    width: 100%;
+    align-items: flex-start;
+    display: flex;
+    justify-content: center;
+    height: 20px;
+}
+.nome-temp1 >h5{
+   color: rgb(32, 32, 32);
+   font-weight: 700;
+}
+.design-temp1{
+    width: 104px;
+    height: 90px;
+    background-color: rgb(13, 158, 151);
+    position: absolute;
+    border-bottom-left-radius:  80px 70px;
+    border-top-right-radius: 10px;
+}
+.photo-template{
+    width: 75px;
+    height: 60px;
+    background-color: #eeeeee;
+    border-radius:20px;
+    margin-right: 3px;
+    position: relative;
+    box-shadow: 0px 10px 22px 2px #033e4653;
+}
+.data-user-header{
+width: 100%;
+}
+.info-user-temp1{
+    margin-top: 7px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: 17px;
+}
+.info-user-temp1 > span{
+ font-size: 7.2px;
+}
+.container-carousel{
+    width: 400px;
+    height: 300px;
+}
+
+.objective{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+.txtarea{
+    margin-top: 20px;
+    resize:none;
+    width: 100%;
+    box-sizing: border-box;
+    border-radius: 3px;
+}
+.form-align{
+
+}
+.row-items{
+    flex-direction: row;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 40px;
 }
