--- a/src/Signin/styles.css
+++ b/src/Signin/styles.css
@@ -175,6 +175,9 @@ position: relative
    background-color:#1e1e1f;
    padding: 10px;
 }
+.container-input > div{
+   cursor: pointer;
+ }
 .container-input > input{
     display: flex;
     width: 100%;
