--- a/src/pages/home/styles.css
+++ b/src/pages/home/styles.css
@@ -23,12 +23,27 @@
     height: 300px;
     margin-left: 60px;
 }
+
 .container-tab-1{
-   
     align-items: flex-start;
     box-sizing: border-box;
-  
 }
+.container-btn-form{
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: -60px;
+    padding: 20px;
+}
+.btn-save-form{
+    outline: none;
+    border: none;
+    background: linear-gradient(to right, #25b797, #82ffa1);
+    box-shadow: 0px 0px 22px #1515153d;
+    width: 90px;
+}
+
 .container-tab-grid-1{
     flex-direction: column;
     align-items: center;
