--- a/src/pages/editCurriculo/styleEdit.css
+++ b/src/pages/editCurriculo/styleEdit.css
@@ -42,6 +42,8 @@ body{
     flex-direction: row;
     justify-content: space-between;
     border-radius: 3px;
+    box-shadow: 0px 10px 22px 2px #0a0a0a2e;
+    cursor: pointer;
 }
 .card-curriculo-empty{
     margin-top: 17px;
@@ -57,8 +59,44 @@ body{
 .card-curriculo-save > span{
    margin: 20px;
 }
+#link-style{
+    width: 50px;
+    height: 50px;
+    border: none;
+    outline: none;
+    border-radius: 20px;
+    margin-left: 10px;
+}
 #link-style:hover{
     transform: scale(1.2);
     transition: all 0.5s;
    
  }
+.label-name-curri{
+   color: #fff;
+   font-weight: 500;
+   
+ }
+ .doc-view{
+    display: flex;
+    align-items: center;
+ }
+ .style-modal{
+    width: 90%;
+    max-width: 500px;
+    height: 530px;
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 20px;
+ }
+.overlay-modal{
+    background-color: rgba(0, 0, 0, 0.553);
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left:0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
