--- a/src/App.css
+++ b/src/App.css
@@ -7,5 +7,15 @@
   outline: 0;
 }
 html, body, #root{
-  height: 100%;
+  height: 100vh; 
+}
+
+::-webkit-scrollbar{
+  background-color: rgba(75, 75, 75, 0.241);
+  width: 10px;
+}
+::-webkit-scrollbar-thumb{
+  background-color: rgba(127, 127, 127, 0.493);
+  width: 10px;
+  border-radius: 10px;
 }
