--- a/src/Components/header/styles.css
+++ b/src/Components/header/styles.css
@@ -2,7 +2,7 @@
 
 .header{
     background-color: #28282a;
-    width: 100vw;
+    width: 100%;
     height: 70px;
     justify-content: space-between;
     flex-direction: row;
@@ -60,6 +60,7 @@
 .photo-user{
     box-shadow: 0px 0px 5px rgba(16, 16, 16, 0.702);
     border-radius: 10px;
+    width: 30px;
 }
 .container-profile-info{
     background-color: #535354;
@@ -98,19 +99,17 @@
     transform: scale(1.1);
     transition: all 0.5s;
     color: #f7f7f7;
-    background: linear-gradient(to right, #20a588,#03aa7b);
+
 }
 .sidbar-photo{
     flex-direction: column;
     display: flex;
     align-items: center;
     justify-content: center;
-
-    box-shadow: 0px 0px 5px rgba(30, 30, 30, 0.593);
     width: 190px;
     padding: 2px;
     border-radius: 10px;
-    
+    height: 40px;
 }
 .sidbar-photo:hover{
     transform: scale(1.1);
@@ -122,19 +121,20 @@
 .sidbar-photo:hover:active{
     transform: scale(1.1);
     transition: all 0.5s;
-    color: #f7f7f7;
-    background: linear-gradient(to right, #20a588,#03aa7b);
-  
+    color: #f7f7f7; 
+}
+.sidbar-photo > Link{
+  text-decoration: none; 
 }
 .photo-user{
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
 }
 @media only screen and (max-width:950px){
     .options-nav{
         flex-direction: row;
         display: flex;
-        width: 55vw;
+        width: 50vw;
         justify-content: space-between;
         align-items: center;
         margin: 5px;
@@ -161,7 +161,7 @@
         transform: scale(1.1);
         transition: all 0.5s;
         color: #f7f7f7;
-        background: linear-gradient(to right, #20a588, #03aa7b);
+      
       
     }
     
