--- a/src/pages/SignUp/styles.css
+++ b/src/pages/SignUp/styles.css
@@ -7,7 +7,7 @@ body{
 }
 .curved{
     margin: 0;
-    width: 100%;
+    width: 100vw;
     position: absolute;
   
     flex-direction: column-reverse;
