--- a/src/Components/templates/temp1/templateView1/tempView1.css
+++ b/src/Components/templates/temp1/templateView1/tempView1.css
@@ -47,11 +47,13 @@
 .header-template-view-1{
     padding: 6px;
     width: 100%;
-    height: 120px;
+    height: 140px;
     background-color:rgba(24, 132, 134, 0.298);
     align-items: center;
     display: flex;
     justify-content: space-between;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
 }
 
 .nome-temp-view1{
@@ -71,12 +73,12 @@
 }
 .design-temp-view-1{
     width: 104px;
-    height: 120px;
+    height: 100px;
     background-color: #0da099;
     position: absolute;
     border-top-left-radius: 70px;
     border-bottom-left-radius: 70px;
-    border-top-right-radius: 0;
+    border-bottom-right-radius: 15px;
     margin-left: 340px;
 }
 
@@ -119,6 +121,14 @@ width: 100%;
     justify-content: center;
 
 }
+.container-form-temp-view-1{
+    width: 100%;
+    height: 100%;
+    justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
 .txtarea{
     resize:none;
     width: 100%;
@@ -135,45 +145,41 @@ width: 100%;
 }
 /* ///////////////////////////// div obetivo/////////////////////////////// */
 
-.objective{
+.container-informacoes-user-view-1{
+    margin-top: 3px;
+    width: 100%;
     display: flex;
     flex-direction: column;
-    width: 100%;
-    align-items: flex-start;
-    box-sizing: border-box;
-    margin-top: 20px;
-    margin-bottom: -10px; 
+    justify-content: space-between;
+  
 }
 .label-info{
     width: 100%;
     height: 20px;
     display: flex;
-    
+     margin-right: 30px;
     flex-direction: column;
     justify-content: center;
     margin-bottom: 10px;
 }
 .label-info > label{
    
-   font-size: 14px;
-   color:  #0f715c;
-   margin-left:30px;
-   font-family: 'Saira', sans-serif;
-   font-weight: 600;
-   margin-top: 30px;
-   display: flex;
-   justify-content: flex-start;
-   
+    font-size: 14px;
+    color:  #0f715c;
+    margin-left:30px;
+    font-family: 'Saira', sans-serif;
+    font-weight: 600;
+    margin-top: 30px;
+    display: flex;
+    justify-content: flex-start;
 }
 
  .text-objctive{
 
     padding-top: 5px;
-    margin-bottom: 10px;
     display: flex;
     box-sizing: border-box;
     justify-content:flex-start;
-    margin-bottom: 10px;
 
  }
  .text-objctive >span{
@@ -182,4 +188,5 @@ width: 100%;
     font-size: 9px;
     margin-left: 32px;
     margin-right: 25px;
+    margin-bottom: -43px;
  }
