--- a/src/Components/tabsCards/styles.css
+++ b/src/Components/tabsCards/styles.css
@@ -2,14 +2,17 @@
     border-radius: 0;
     color: #fff;
     background-color: #28282a;
-    font-size: 11px;
+    font-size: 8px;
+    height: 45px;
+
 }
 .nav-pills .nav-item:not(:nth-last-child(1)) .nav-link{
     border-right: 2px solid #323232;
 }
 .nav.nav-pills .nav-link.active {
     background-color:  #25b797;
-    font-size: 12px;
+    font-size: 9.5px;
+    letter-spacing: 1px;
 }
 #colorLabelText{
     color: #fff;
