Componentizando e ajustando os elemntos do formulário( tab1: Dados pessoais).

--- a/src/Components/tabsCards/tab1/tabCadr1.css
+++ b/src/Components/tabsCards/tab1/tabCadr1.css
@@ -16,7 +16,10 @@ body{
     flex-direction: column;
     display: flex;
 }
-
+.select-marital-status{
+    background-color: #fff;
+    border-radius: 30px;
+}
 .inputName{
     width: 100%;
     outline: none;
