--- a/src/Components/templates/temp1/temp1.css
+++ b/src/Components/templates/temp1/temp1.css
@@ -165,11 +165,10 @@ width: 100%;
 .text-objctive-temp1{
 
     padding-top: 5px;
-    margin-bottom: 10px;
     display: flex;
     box-sizing: border-box;
     justify-content:flex-start;
-    margin-bottom: 10px;
+
 
  }
  .text-objctive-temp1>span{
@@ -178,6 +177,7 @@ width: 100%;
     font-size: 6px;
     margin-left: 32px;
     margin-right: 25px;
+    margin-bottom: -43px;
  }
 @media only screen and (max-width:1240px){
     .template-1{
@@ -187,14 +187,39 @@ width: 100%;
 
     }
     .design-temp-1{
-        width: 104px;
-        height: 93px;
+        width: 90px;
+        height: 70px;
+        margin-bottom: 10px;
         background-color: #0da099;
-        position: absolute;
-        border-top-left-radius: 70px;
-        border-bottom-left-radius: 70px;
-        border-top-right-radius: 10px;
-        border-bottom-right-radius: 30px;
-        margin-left: 160px;
+        border-bottom-right-radius: 40px;
+        border-top-right-radius: 30px;
+        margin-left: 174px;
     }
+    .photo-template-1{
+        width: 55px;
+        height: 55px;
+        margin-bottom: 10px;
+    }
+    
+    .container-form-temp-1{
+
+        width: 100%;
+        height: 100vh;
+    }
+    .header-template-1{
+      
+        width: 100%;
+        height: 75px;
+        border-bottom-left-radius: 30px;
+        border-bottom-right-radius: 30px;
+    }
+    .text-objctive-temp1>span{
+        display: flex;
+        text-align: justify;
+        font-size: 6px;
+        margin-bottom: -15px;
+     }
+     .info-user-temp-1 > span{
+        font-size: 5.2px;
+       }
 }
