--- a/src/Components/footer/footer.css
+++ b/src/Components/footer/footer.css
@@ -27,9 +27,10 @@
     font-family: 'Varela Round', sans-serif;
 }
 .social-btns{
-    width: 90px;
+    width: 140px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    cursor: pointer;
     
 }
