--- a/src/Components/tabsCards/styles.css
+++ b/src/Components/tabsCards/styles.css
@@ -1,7 +1,7 @@
 .nav-pills .nav-link{
     border-radius: 0;
     color: #fff;
-    background-color: #28282a;
+    background-color: #363639;
     font-size: 8px;
     height: 45px;
 
