tab experiencia finalizada

--- a/src/Components/tabsCards/tabExperiencia/tabXp.css
+++ b/src/Components/tabsCards/tabExperiencia/tabXp.css
@@ -3,16 +3,35 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    padding: 5px;
   
   }
-  .inputs-XP > input{
-    margin-top: 20px;
-    margin-left: 3px;  
-    width: 60%;
+  .inputs-XP > div{
+    
+    
+    outline: none;
+    border: none;
+    display: flex;
+    flex-direction: column;
+    margin-top: 5px;
+    
+  }
+   .inputs-XP > div>input{
+   
+    width: 90%;
     height: 25px;
     background-color:#fff;
     outline: none;
     padding: 8px;
     border: none;
-    border-radius: 10px;
+    border-radius: 15px;
+  }
+  .btns-xp{
+ 
+    display: flex;
+    flex-direction: row;
+    margin-left: 10px;
+    justify-content: center;
+    align-items: center;
+ 
   }
