--- a/src/Components/templates/temp1/temp1.css
+++ b/src/Components/templates/temp1/temp1.css
@@ -180,6 +180,45 @@ width: 100%;
     margin-bottom: -43px;
  }
 @media only screen and (max-width:1240px){
+    .label-info-mini-temp{
+        width: 100%;
+        height: 20px;
+        display: flex;
+         margin-right: 30px;
+        flex-direction: column;
+        justify-content: center;
+        margin-bottom: 10px;
+    }
+    .label-info-mini-temp > label{
+       
+       font-size: 9px;
+       color:  #0f715c;
+       margin-left:30px;
+       font-family: 'Saira', sans-serif;
+       font-weight: 600;
+       margin-top: 40px;
+       display: flex;
+       justify-content: flex-start;
+      
+       
+    }
+    
+    .text-objctive-temp1{
+    
+        padding-top: 5px;
+        display: flex;
+        box-sizing: border-box;
+        justify-content:flex-start;
+    
+    
+     }
+     .text-objctive-temp1>span{
+        display: flex;
+        text-align: justify;
+        font-size: 5px;
+        margin-left: 32px;
+        margin-right: 25px;
+        margin-bottom: -43px;}
     .template-1{
         margin-left: 30.5px;
         width: 270px;
@@ -217,7 +256,13 @@ width: 100%;
         display: flex;
         text-align: justify;
         font-size: 6px;
-        margin-bottom: -15px;
+
+     }
+     .text-objctive-temp1>div{
+        display: flex;
+        text-align: justify;
+        font-size: 6px;
+      
      }
      .info-user-temp-1 > span{
         font-size: 5.2px;
