--- a/src/Components/templates/temp2/temp2.css
+++ b/src/Components/templates/temp2/temp2.css
@@ -1,137 +1,298 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Dancing+Script&family=Khand:wght@300;400;500;600&family=Quicksand:wght@300;500&family=Source+Sans+Pro:wght@200&family=Varela+Round&display=swap');
 
-.temp2{
-    background-color: #f3f3f3;
-    width: 100px;
-    height: 100px;
-}
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Dancing+Script&family=Khand:wght@300;400;500;600&family=Quicksand:wght@300;500&family=Source+Sans+Pro:wght@200&family=Varela+Round&display=swap');
 
-.container-city-nasc{
+
+.container-form-temp-2{
+
     width: 100%;
-    flex-direction: row;
-    display: flex;
-    margin-bottom: 25px;
+    height: 100%;
     justify-content: space-between;
-}
-.container-city-nasc > label{
+    display: flex;
     flex-direction: column;
-    display: flex;
+    margin-bottom: 20px;
 }
 
-.line{
-    background-color: #25b797;
-    height: 10px;
-    width: 430px;
-    bottom: 10px;
-    position: relative;
-    border-bottom-left-radius: 8px;
-    border-bottom-right-radius: 8px;
-}
 
-.inputName{
-    width: 100%;
-    outline: none;
-    border: none;
-    height: 25px;
-    background-color: rgb(255, 255, 255);
-    box-sizing: border-box;
-    border-radius: 5px;
-}
-#labelStyle{
-    font-family: 'Varela Round', sans-serif;
-    margin:3px;
-    align-items: flex-start;
-    display: flex;
-    width: 100%;
-}
-#select-state-civil{
-    outline: none;
-    border: none;
-    background-color: #9f9f9f;
-}
-.carousel{
-    align-items: center;
-    justify-content: center;
- 
-}
-.shere{
-    width: 330px;
-    height: 460px;
-    display: flex;
-    align-items: center;
-    box-shadow: 0px 10px 22px 2px #0a0a0a53;
-    box-sizing: border-box;
-    background-color: #dca9e7;;
-    border-radius: 10px;
-    margin-left: 35px;
-    justify-content: center;
-}
-.template2{
-    margin-left: 35px;
-    width: 330px;
-    height: 460px;
+.template-2{
+    margin-left: 40px;
+    width: 320px;
+    height: 470px;
     display: flex;
     align-items: flex-start;
     box-shadow: 0px 10px 22px 2px #0a0a0a53;
     box-sizing: border-box;
-    background-color: #64f8eca4;;
+    background-color: #f3f3f3;;  
+    flex-direction: column;
+    justify-content: space-between;
+    padding-bottom: 40px;
     border-radius: 10px;
-    justify-content: flex-end;
+    background-color: #fff;
 }
 
 .header-template-2{
     padding: 6px;
     width: 100%;
-    height: 90px;
-    background-color:rgba(2, 102, 97, 0.16);
+    height: 95px;
+    background-color:#9639e2d1;
     align-items: center;
     display: flex;
-    justify-content: space-between;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    justify-content: center;
+    border-radius: 10px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+    position: relative;
+    
 }
-
-.nome-temp2{
+.informacoes-row{
     width: 100%;
-    align-items: flex-start;
+    height: 45px;
+    background-color:rgba(207, 163, 245, 0.411);
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+.nome-temp-2{
+    width: 100%;
+    align-items: center;
     display: flex;
     justify-content: center;
     height: 20px;
+    margin-bottom: -260px;
+
 }
-.nome-temp2 >h5{
-   color: rgb(32, 32, 32);
+.nome-temp-2 >h5{
+   color: rgb(255, 255, 255);
    font-weight: 700;
+   font-family: 'Saira', sans-serif;
+   font-size: 13px;
+   position: absolute;
+   display: flex;
 }
-.design-temp2{
-    width: 104px;
-    height: 90px;
-    background-color: rgb(13, 158, 151);
-    position: absolute;
-    border-bottom-left-radius:  80px 70px;
-    border-top-right-radius: 10px;
-}
-.photo-template-2{
-    width: 75px;
+.design-temp-2{
+    width: 90px;
     height: 60px;
-    background-color: #eeeeee;
-    border-radius:20px;
-    margin-right: 3px;
-    position: relative;
-    box-shadow: 0px 10px 22px 2px #033e4653;
+    background-color: #660f8c;
+    position: absolute;
+    border-top-left-radius: 60px;
+    border-bottom-left-radius: 20px;
+    border-top-right-radius: 60px;
+    border-bottom-right-radius: 20px;
+    
 }
-.data-user-header{
-width: 100%;
+
+.photo-template-2{
+    width: 55px;
+    height: 50px;
+    background-color: #eeeeee54;
+    border-radius:60px;
+    position: absolute;
+    box-shadow: 0px 10px 22px 2px #4e076fa4;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
 }
-.info-user-temp2{
-    margin-top: 7px;
+
+.data-user-header-2{
+  width: 100%;
+  height: 20px;
+  background-color:#9639e2d1;
+}
+.info-user-temp-2{
+    margin-top: 3px;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin-left: 17px;
+   
 }
-.info-user-temp2 > span{
- font-size: 7.2px;
+.info-user-temp-2 > div{  
+    width: 100%;
+    display: flex;
+    flex-direction:row;
+    justify-content: space-evenly;
+    align-items: center;
+  
+}
+.info-user-temp-2 > div> span{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    font-size: 6.2px;
+
+    width: 130px;
+}
+.container-carousel{
+    width: 400px;
+    height: 300px;
 }
 
+.txtarea{
+    resize:none;
+    width: 100%;
+    box-sizing: border-box;
+    border-radius: 3px;
+}
 
+.row-items{
+    flex-direction: row;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 40px;
+}
+/* ///////////////////////////// div obetivo/////////////////////////////// */
+
+.container-informacoes-user-2{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: flex-start;
+    box-sizing: border-box;
+}
+.label-info-mini-temp-2{
+    width: 100%;
+    height: 20px;
+    display: flex;
+     margin-right: 30px;
+    flex-direction: column;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+.label-info-mini-temp-2 > label{
+   
+   font-size: 9px;
+   color: rgb(76, 10, 123);
+   margin-left:30px;
+   font-family: 'Saira', sans-serif;
+   font-weight: 600;
+   margin-top: 30px;
+   display: flex;
+   justify-content: flex-start;
+  
+   
+}
+
+.text-objctive-temp2{
+
+    padding-top: 5px;
+    display: flex;
+    box-sizing: border-box;
+    justify-content:flex-start;
+
+
+ }
+ .text-objctive-temp2>span{
+    display: flex;
+    text-align: justify;
+    font-size: 6px;
+    margin-left: 32px;
+    margin-right: 25px;
+    margin-bottom: -43px;
+ }
+@media only screen and (max-width:1240px){
+    .container-form-temp-2{
+    height: 120%;  
+}
+    .nome-temp-2 >h5{
+        color: rgb(255, 255, 255);
+        font-weight: 700;
+        font-family: 'Saira', sans-serif;
+        font-size: 10px;
+        position: absolute;
+        display: flex;
+        margin-bottom: -2.5px;
+     }
+    .data-user-header-2{
+       
+        width: 100%;
+        height: 60px;
+        background-color:#9639e2d1;
+      }
+    .informacoes-row{
+        width: 100%;
+        height: 50px;
+        background-color:rgba(207, 163, 245, 0.411);
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+    }
+    .label-info-mini-temp-2{
+        width: 100%;
+        height: 20px;
+        display: flex;
+        margin-right: 30px;
+        flex-direction: column;
+        justify-content: center;
+        margin-bottom: 10px;
+    }
+    .label-info-mini-temp-2> label{
+        font-size: 9px;
+        color: rgb(76, 10, 123);
+        margin-left:30px;
+        justify-content: flex-start;
+         margin-top: 30px;     
+    }
+    
+    .text-objctive-temp2{
+    
+        padding-top: 5px;
+        display: flex;
+        box-sizing: border-box;
+        justify-content:flex-start;
+    
+    
+     }
+     .text-objctive-temp2>span{
+        display: flex;
+        text-align: justify;
+        font-size: 4px;
+        margin-left: 32px;
+        margin-right: 25px;
+        margin-bottom: -43px;}
+    .template-2{
+        margin-left: 30.5px;
+        width: 270px;
+        height: 400px;
+
+    }
+    .design-temp-2{
+        width: 90px;
+        height: 65px;
+        background-color: #660f8c;
+        position: absolute;
+        border-top-left-radius: 60px;
+        border-bottom-left-radius: 20px;
+        border-top-right-radius: 60px;
+        border-bottom-right-radius: 20px;
+    }
+    .photo-template-2{
+        width: 55px;
+        height: 55px;
+        margin-bottom: -10px;
+    }
+    
+    .container-form-temp-2{
+        width: 100%;
+        height: 100vh;
+    }
+    .header-template-2{ 
+        width: 100%;
+        height: 180px;    
+      
+    }
+    .text-objctive-temp2>span{
+        display: flex;
+        text-align: justify;
+        font-size: 5px;
+
+     }
+     .text-objctive-temp2>div{
+        display: flex;
+        text-align: justify;
+        font-size: 6px;
+      
+     }
+     .info-user-temp-2 > span{
+        font-size: 5.2px;
+       }
+}
